@@ -1,5 +1,5 @@
 link-libspice-server-with-libm-libpthread.patch
 fix-build-warning-PIXEL.patch
-fix-build-warnings.patch
+fix-tests-warnings.patch
 spice-common-remove-version-construction.patch
 make-celt-to-be-optional.patch
